semi-complete with a bug in scoring

--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,3 +1,25 @@
 #TttButton.Mui-disabled {
     color: black;
 }
+
+.homeContainer {
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+    flex-direction: column;
+}
+
+.headerContainer {
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+    width: max-content;
+    margin-bottom: 1rem;
+}
+
+.center {
+    width: max-content;
+    margin-left: auto;
+    margin-right: auto;
+}
