--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -2,6 +2,15 @@
     width: 100%;
     height: 100vh;
     display: flex;
+    margin: 1rem;
+}
+
+div.homeCenter {
+    width: max-content;
+    height: max-content;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
 }
 
 a.homeCenter {
